--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,38 +1,30 @@
-name: 'Terraform CI/CD'
+name: Terraform Plan
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
 
 jobs:
   terraform:
-    name: 'Terraform'
     runs-on: ubuntu-latest
-
-    # Set up permissions for GitHub OIDC (more secure than access keys)
-    permissions:
-      contents: 'read'
-      id-token: 'write'
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
+    - uses: actions/checkout@v3
+    
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v2
       with:
-        terraform_version: '1.9.0'
-
-    - name: Terraform Format
-      id: fmt
-      run: terraform fmt -check
-
+        terraform_version: 1.5.0
+    
     - name: Terraform Init
-      id: init
       run: terraform init
-      env:
+      
+    - name: Terraform Validate
+      run: terraform validate
+      
+    - name: Terraform Plan
+      run: terraform plan
         # Use the secrets you configured
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
