--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -25,10 +25,11 @@ jobs:
       
     - name: Terraform Plan
       run: terraform plan
-        # Use the secrets you configured
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_REGION: ${{ secrets.AWS_REGION }}
+
+      # Use the secrets you configured
+    - AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID }}
+    - AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY }}
+     AWS_REGION: ${{secrets.AWS_REGION }}
 
     - name: Terraform Validate
       id: validate
