--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,42 +1,43 @@
-name: Terraform Plan
+name: Terraform CI/CD
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   terraform:
     runs-on: ubuntu-latest
+    environment: production  # Optional: if you set up environments
+
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
     
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v2
       with:
         terraform_version: 1.5.0
     
+    - name: Terraform Format Check
+      run: terraform fmt -check
+    
     - name: Terraform Init
       run: terraform init
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: ${{ secrets.AWS_REGION }}
       
     - name: Terraform Validate
       run: terraform validate
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: ${{ secrets.AWS_REGION }}
       
     - name: Terraform Plan
-      run: terraform plan
-
-      # Use the secrets you configured
-    - AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID }}
-    - AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY }}
-     AWS_REGION: ${{secrets.AWS_REGION }}
-
-    - name: Terraform Validate
-      id: validate
-      run: terraform validate
-
-    - name: Terraform Plan
-      id: plan
       run: terraform plan -no-color -input=false
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
