--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -41,5 +41,4 @@ jobs:
       run: terraform apply -auto-approve -input=false
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}# Last updated: Thu Sep 25 22:38:23 WCAST 2025
-
+        AWS_SECRET_ACCESS_KEY:= ${{ secrets.AWS_SECRET_ACCESS_KEY }}# Last updated: Thu Sep 25 22:38:23 WCAST 2025
